[tool.poetry]
name = "tap-klaviyo"
version = "0.1.2"
description = "Singer.io tap for extracting data from Klaviyo"
authors = ["Simon Data"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
singer-python = "6.8.0"
requests = "2.32.5"
backoff = "2.2.1"

[[tool.poetry.source]]
name = "artifactory"
url = "https://simondata.jfrog.io/artifactory/api/pypi/pypi/simple"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ipdb = "0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-klaviyo = "tap_klaviyo:main"

[tool.poetry.plugins]

[tool.poetry.plugins."tap-klaviyo"]
"tap-klaviyo" = "tap_klaviyo:main"
